atualizando cor de link do footer

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -192,6 +192,10 @@ footer {
     padding: 5px;
 }
 
+footer a {
+    color: var(--cor3)
+}
+
 footer a:hover {
     text-decoration: underline;
     color: var(--cor1);
